libs/glfw.c3l/glfw.c3i


fn GLFWmonitorfun setMonitorCallback(
  GLFWmonitorfun callback)
@extern("glfwSetMonitorCallback");

fn GLFWvidmode* getVideoModes(
  GLFWmonitor* monitor, 
  CInt* count)
@extern("glfwGetVideoModes");

fn GLFWvidmode* getVideoMode(
  GLFWmonitor* monitor)
@extern("glfwGetVideoMode");

fn void setGamma(
  GLFWmonitor* monitor, 
  float gamma)
@extern("glfwSetGamma");

fn GLFWgammaramp* getGammaRamp(
  GLFWmonitor* monitor)
@extern("glfwGetGammaRamp");

fn void setGammaRamp(
  GLFWmonitor* monitor, 
  GLFWgammaramp* ramp)
@extern("glfwSetGammaRamp");

fn void defaultWindowHints()
@extern("glfwDefaultWindowHints");

fn void windowHint(
  CInt hint, 
  CInt value)
@extern("glfwWindowHint");

fn void windowHintString(
  CInt hint, 
  CChar* value)
@extern("glfwWindowHintString");

fn GLFWwindow* createWindow(
  CInt width, 
  CInt height, 
  CChar* title, 
  GLFWmonitor* monitor, 
  GLFWwindow* share)
@extern("glfwCreateWindow");

fn void destroyWindow(
  GLFWwindow* window)
@extern("glfwDestroyWindow");

fn CInt windowShouldClose(
  GLFWwindow* window)
@extern("glfwWindowShouldClose");

fn void setWindowShouldClose(
  GLFWwindow* window, 
  CInt value)
@extern("glfwSetWindowShouldClose");

fn void setWindowTitle(
  GLFWwindow* window, 
  CChar* title)
@extern("glfwSetWindowTitle");

fn void setWindowIcon(
  GLFWwindow* window, 
  CInt count, 
  GLFWimage* images)
@extern("glfwSetWindowIcon");

fn void getWindowPos(
  GLFWwindow* window, 
  CInt* xpos, 
  CInt* ypos)
@extern("glfwGetWindowPos");

fn void setWindowPos(
  GLFWwindow* window, 
  CInt xpos, 
  CInt ypos)
@extern("glfwSetWindowPos");

fn void getWindowSize(
  GLFWwindow* window, 
  CInt* width, 
  CInt* height)
@extern("glfwGetWindowSize");

fn void setWindowSizeLimits(
  GLFWwindow* window, 
  CInt minwidth, 
  CInt minheight, 
  CInt maxwidth, 
  CInt maxheight)
@extern("glfwSetWindowSizeLimits");

fn void setWindowAspectRatio(
  GLFWwindow* window, 
  CInt numer, 
  CInt denom)
@extern("glfwSetWindowAspectRatio");

fn void setWindowSize(
  GLFWwindow* window, 
  CInt width, 
  CInt height)
@extern("glfwSetWindowSize");

fn void getFramebufferSize(
  GLFWwindow* window, 
  CInt* width, 
  CInt* height)
@extern("glfwGetFramebufferSize");

fn void getWindowFrameSize(
  GLFWwindow* window, 
  CInt* left, 
  CInt* top, 
  CInt* right, 
  CInt* bottom)
@extern("glfwGetWindowFrameSize");

fn void getWindowContentScale(
  GLFWwindow* window, 
  float* xscale, 
  float* yscale)
@extern("glfwGetWindowContentScale");

fn float getWindowOpacity(
  GLFWwindow* window)
@extern("glfwGetWindowOpacity");

fn void setWindowOpacity(
  GLFWwindow* window, 
  float opacity)
@extern("glfwSetWindowOpacity");

fn void iconifyWindow(
  GLFWwindow* window)
@extern("glfwIconifyWindow");

fn void restoreWindow(
  GLFWwindow* window)
@extern("glfwRestoreWindow");

fn void maximizeWindow(
  GLFWwindow* window)
@extern("glfwMaximizeWindow");

fn void showWindow(
  GLFWwindow* window)
@extern("glfwShowWindow");

fn void hideWindow(
  GLFWwindow* window)
@extern("glfwHideWindow");

fn void focusWindow(
  GLFWwindow* window)
@extern("glfwFocusWindow");

fn void requestWindowAttention(
  GLFWwindow* window)
@extern("glfwRequestWindowAttention");

fn GLFWmonitor* getWindowMonitor(
  GLFWwindow* window)
@extern("glfwGetWindowMonitor");

fn void setWindowMonitor(
  GLFWwindow* window, 
  GLFWmonitor* monitor, 
  CInt xpos, 
  CInt ypos, 
  CInt width, 
  CInt height, 
  CInt refresh_rate)
@extern("glfwSetWindowMonitor");

fn CInt getWindowAttrib(
  GLFWwindow* window, 
  CInt attrib)
@extern("glfwGetWindowAttrib");

fn void setWindowAttrib(
  GLFWwindow* window, 
  CInt attrib, 
  CInt value)
@extern("glfwSetWindowAttrib");

fn void setWindowUserPointer(
  GLFWwindow* window, 
  void* pointer)
@extern("glfwSetWindowUserPointer");

fn void* getWindowUserPointer(
  GLFWwindow* window)
@extern("glfwGetWindowUserPointer");

fn GLFWwindowposfun setWindowPosCallback(
  GLFWwindow* window, 
  GLFWwindowposfun callback)
@extern("glfwSetWindowPosCallback");

fn GLFWwindowsizefun setWindowSizeCallback(
  GLFWwindow* window, 
  GLFWwindowsizefun callback)
@extern("glfwSetWindowSizeCallback");

fn GLFWwindowclosefun setWindowCloseCallback(
  GLFWwindow* window, 
  GLFWwindowclosefun callback)
@extern("glfwSetWindowCloseCallback");

fn GLFWwindowrefreshfun setWindowRefreshCallback(
  GLFWwindow* window, 
  GLFWwindowrefreshfun callback)
@extern("glfwSetWindowRefreshCallback");

fn GLFWwindowfocusfun setWindowFocusCallback(
  GLFWwindow* window, 
  GLFWwindowfocusfun callback)
@extern("glfwSetWindowFocusCallback");

fn GLFWwindowiconifyfun setWindowIconifyCallback(
  GLFWwindow* window, 
  GLFWwindowiconifyfun callback)
@extern("glfwSetWindowIconifyCallback");

fn GLFWwindowmaximizefun setWindowMaximizeCallback(
  GLFWwindow* window, 
  GLFWwindowmaximizefun callback)
@extern("glfwSetWindowMaximizeCallback");

fn GLFWframebuffersizefun setFramebufferSizeCallback(
  GLFWwindow* window, 
  GLFWframebuffersizefun callback)
@extern("glfwSetFramebufferSizeCallback");

fn GLFWwindowcontentscalefun setWindowContentScaleCallback(
  GLFWwindow* window, 
  GLFWwindowcontentscalefun callback)
@extern("glfwSetWindowContentScaleCallback");

fn void pollEvents()
@extern("glfwPollEvents");

fn void waitEvents()
@extern("glfwWaitEvents");

fn void waitEventsTimeout(
  double timeout)
@extern("glfwWaitEventsTimeout");

fn void postEmptyEvent()
@extern("glfwPostEmptyEvent");

fn CInt getInputMode(
  GLFWwindow* window, 
  CInt mode)
@extern("glfwGetInputMode");

fn void setInputMode(
  GLFWwindow* window, 
  CInt mode, 
  CInt value)
@extern("glfwSetInputMode");

fn CInt rawMouseMotionSupported()
@extern("glfwRawMouseMotionSupported");

fn CChar* getKeyName(
  CInt key, 
  CInt scancode)
@extern("glfwGetKeyName");

fn CInt getKeyScancode(
  CInt key)
@extern("glfwGetKeyScancode");

fn CInt getKey(
  GLFWwindow* window, 
  CInt key)
@extern("glfwGetKey");

fn CInt getMouseButton(
  GLFWwindow* window, 
  CInt button)
@extern("glfwGetMouseButton");

fn void getCursorPos(
  GLFWwindow* window, 
  double* xpos, 
  double* ypos)
@extern("glfwGetCursorPos");

fn void setCursorPos(
  GLFWwindow* window, 
  double xpos, 
  double ypos)
@extern("glfwSetCursorPos");

fn GLFWcursor* createCursor(
  GLFWimage* image, 
  CInt xhot, 
  CInt yhot)
@extern("glfwCreateCursor");

fn GLFWcursor* createStandardCursor(
  CInt shape)
@extern("glfwCreateStandardCursor");

fn void destroyCursor(
  GLFWcursor* cursor)
@extern("glfwDestroyCursor");

fn void setCursor(
  GLFWwindow* window, 
  GLFWcursor* cursor)
@extern("glfwSetCursor");

fn GLFWkeyfun setKeyCallback(
  GLFWwindow* window, 
  GLFWkeyfun callback)
@extern("glfwSetKeyCallback");

fn GLFWcharfun setCharCallback(
  GLFWwindow* window, 
  GLFWcharfun callback)
@extern("glfwSetCharCallback");

fn GLFWcharmodsfun setCharModsCallback(
  GLFWwindow* window, 
  GLFWcharmodsfun callback)
@extern("glfwSetCharModsCallback");

fn GLFWmousebuttonfun setMouseButtonCallback(
  GLFWwindow* window, 
  GLFWmousebuttonfun callback)
@extern("glfwSetMouseButtonCallback");

fn GLFWcursorposfun setCursorPosCallback(
  GLFWwindow* window, 
  GLFWcursorposfun callback)
@extern("glfwSetCursorPosCallback");

fn GLFWcursorenterfun setCursorEnterCallback(
  GLFWwindow* window, 
  GLFWcursorenterfun callback)
@extern("glfwSetCursorEnterCallback");

fn GLFWscrollfun setScrollCallback(
  GLFWwindow* window, 
  GLFWscrollfun callback)
@extern("glfwSetScrollCallback");

fn GLFWdropfun setDropCallback(
  GLFWwindow* window, 
  GLFWdropfun callback)
@extern("glfwSetDropCallback");

fn CInt joystickPresent(
  CInt jid)
@extern("glfwJoystickPresent");

fn float* getJoystickAxes(
  CInt jid, 
  CInt* count)
@extern("glfwGetJoystickAxes");

fn char* getJoystickButtons(
  CInt jid, 
  CInt* count)
@extern("glfwGetJoystickButtons");

fn char* getJoystickHats(
  CInt jid, 
  CInt* count)
@extern("glfwGetJoystickHats");

fn CChar* getJoystickName(
  CInt jid)
@extern("glfwGetJoystickName");

fn CChar* getJoystickGUID(
  CInt jid)
@extern("glfwGetJoystickGUID");

fn void setJoystickUserPointer(
  CInt jid, 
  void* pointer)
@extern("glfwSetJoystickUserPointer");

fn void* getJoystickUserPointer(
  CInt jid)
@extern("glfwGetJoystickUserPointer");

fn CInt joystickIsGamepad(
  CInt jid)
@extern("glfwJoystickIsGamepad");

fn GLFWjoystickfun setJoystickCallback(
  GLFWjoystickfun callback)
@extern("glfwSetJoystickCallback");

fn CInt updateGamepadMappings(
  CChar* string)
@extern("glfwUpdateGamepadMappings");

fn CChar* getGamepadName(
  CInt jid)
@extern("glfwGetGamepadName");

fn CInt getGamepadState(
  CInt jid, 
  GLFWgamepadstate* state)
@extern("glfwGetGamepadState");

fn void setClipboardString(
  GLFWwindow* window, 
  CChar* string)
@extern("glfwSetClipboardString");

fn CChar* getClipboardString(
  GLFWwindow* window)
@extern("glfwGetClipboardString");

fn double getTime()
@extern("glfwGetTime");

fn void setTime(
  double time)
@extern("glfwSetTime");

fn ulong getTimerValue()
@extern("glfwGetTimerValue");

fn ulong getTimerFrequency()
@extern("glfwGetTimerFrequency");

fn void makeContextCurrent(
  GLFWwindow* window)
@extern("glfwMakeContextCurrent");

fn GLFWwindow* getCurrentContext()
@extern("glfwGetCurrentContext");

fn void swapBuffers(
  GLFWwindow* window)
@extern("glfwSwapBuffers");

fn void swapInterval(
  CInt interval)
@extern("glfwSwapInterval");

fn CInt extensionSupported(
  CChar* extension)
@extern("glfwExtensionSupported");

fn GLFWglproc getProcAddress(
  CChar* procname)
@extern("glfwGetProcAddress");

fn CInt vulkanSupported()
@extern("glfwVulkanSupported");

fn CChar** getRequiredInstanceExtensions(
  uint* count)
@extern("glfwGetRequiredInstanceExtensions");

module glfw @if($defined(env::GLFW_INCLUDE_VULKAN) &&& env::GLFW_INCLUDE_VULKAN);
import vulkan;

fn GLFWvkproc getInstanceProcAddress(
  VkInstance instance, 
  CChar* procname)
@extern("glfwGetInstanceProcAddress");

fn CInt getPhysicalDevicePresentationSupport(
  VkInstance instance, 
  VkPhysicalDevice device, 
  uint queuefamily)
@extern("glfwGetPhysicalDevicePresentationSupport");

fn VkResult createWindowSurface(
  VkInstance instance, 
  GLFWwindow* window, 
  VkAllocationCallbacks* allocator, 
  VkSurfaceKHR* surface)
@extern("glfwCreateWindowSurface");
